include ../common.mk 
bin_PROGRAMS = components largest_component strong_conn node_components
components_SOURCES = components.c ../utils/utils.c ../include/utils.h
components_LDADD = -lm
largest_component_SOURCES = largest_component.c ../utils/utils.c ../include/utils.h
largest_component_LDADD = -lm
strong_conn_SOURCES = strong_conn.c ../utils/utils.c ../include/utils.h
strong_conn_LDADD = -lm
node_components_SOURCES = node_components.c ../utils/utils.c ../include/utils.h
node_components_LDADD = -lm
