include ../common.mk 
bin_PROGRAMS = er_A er_B
er_A_SOURCES = er_A.c ../utils/utils.c ../utils/iltree.c ../utils/iltree_double.c \
../include/utils.h ../include/iltree.h ../include/iltree_double.h
er_A_LDADD = -lm
er_B_SOURCES = er_B.c ../utils/utils.c ../utils/iltree.c ../utils/iltree_double.c \
../include/utils.h ../include/iltree.h ../include/iltree_double.h
er_B_LDADD = -lm

