include ../common.mk 
bin_PROGRAMS = knn knn_w
knn_SOURCES = knn.c knntree.c knntree.h \
../utils/utils.c ../utils/iltree.c \
../include/utils.h ../include/iltree.h
knn_LDADD = -lm
knn_w_SOURCES = knn_w.c knntree.c knntree.h \
../utils/utils.c ../utils/iltree.c \
../include/utils.h ../include/iltree.h
knn_w_LDADD = -lm

